--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
   <img 
     src="razor2.png" 
     alt="Razorpay Secure Payment"
-    class="h-14 w-auto"
+    class="h-10 w-auto"
   >
 </div>
 
@@ -710,9 +710,9 @@
       </div>
      </div>
     </div>
+    <p class="text-gray-400 md:text-center tracking-wide w-full flex pb-6 justify-center items-center">Made by <!-- -->&nbsp; <span class="text-[#ffc857] underline underline-offset-2"> Codeential Technologies</span></p>
    </footer>
    
-   <p class="text-gray-400 md:text-center tracking-wide w-full flex justify-center items-center">Made by<!-- --> <span class="text-[#ffc857] underline underline-offset-2">Codeential Technologies</span></p>
 
 
     <!-- 
